Fix spacing on home page.

--- a/_less/main.less
+++ b/_less/main.less
@@ -247,6 +247,12 @@ body.home {
 
   .what-we-do {
     .clearfix();
+    h2 {
+      margin-top: 2em;
+    }
+    p {
+      margin-bottom: 6em;
+    }
   }
 
 }
